Criação da regra de neócio, fachada e controler.

--- a/ProjetoWEB/ProjetoWEB.csproj
+++ b/ProjetoWEB/ProjetoWEB.csproj
@@ -134,11 +134,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\Fachada\Fachada.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\Regra\ClienteRegra.cs" />
+    <Compile Include="Controllers\Regra\IUsuario.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entidade\Pessoa.cs" />
+    <Compile Include="Models\Entidade\Cliente.cs" />
+    <Compile Include="Models\ViewModels\HomeViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
